[gd_scene load_steps=14 format=3 uid="uid://c8fshbmgebic0"]

[ext_resource type="Script" uid="uid://dwr5wm6dohig8" path="res://SCREENS/MainMenu/main_menu.gd" id="1_s48ht"]
[ext_resource type="FontFile" uid="uid://df7p3ip6t1dxw" path="res://RESOURCES/Fonts/NationalPark-VariableFont_wght.ttf" id="2_qgesx"]
[ext_resource type="Texture2D" uid="uid://d4bsdgd8yer0q" path="res://SCREENS/MainMenu/Assets/main-menu-bg.png" id="2_scuv0"]
[ext_resource type="Theme" uid="uid://4tg6bw6qskp5" path="res://RESOURCES/Themes/main_theme.tres" id="4_2tit2"]
[ext_resource type="Texture2D" uid="uid://bxj0banlete43" path="res://SCREENS/MainMenu/Assets/ui_9patch.png" id="5_qrpx3"]
[ext_resource type="Texture2D" uid="uid://s747pa4krhh6" path="res://SCREENS/MainMenu/Assets/ui_close.png" id="6_q2ppu"]
[ext_resource type="AudioStream" uid="uid://dasjn2rqhc27o" path="res://COMPONENTS/GameUI/Assets/475188__sheyvan__button-clicking-1.wav" id="7_q2ppu"]
[ext_resource type="Texture2D" uid="uid://bt61dyx23tjh3" path="res://SCREENS/MainMenu/Assets/logo_small_monochrome_dark.png" id="8_p8tb1"]

[sub_resource type="FontVariation" id="FontVariation_scuv0"]
base_font = ExtResource("2_qgesx")
variation_opentype = {
2003265652: 800
}

[sub_resource type="LabelSettings" id="LabelSettings_s48ht"]
font = SubResource("FontVariation_scuv0")
font_size = 96
font_color = Color(0.11372549, 0.34509805, 0.6117647, 1)
outline_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_2tit2"]
font = SubResource("FontVariation_scuv0")
font_size = 84
font_color = Color(0.17254902, 0.40392157, 0.6313726, 1)
outline_size = 48

[sub_resource type="FontVariation" id="FontVariation_ce7j4"]
base_font = ExtResource("2_qgesx")
variation_opentype = {
2003265652: 700
}

[sub_resource type="LabelSettings" id="LabelSettings_p8tb1"]
font = SubResource("FontVariation_ce7j4")
font_size = 24
outline_size = 16
outline_color = Color(0.11372549, 0.34509805, 0.6117647, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s48ht")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_scuv0")
stretch_mode = 6

[node name="Content" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -371.0
offset_top = -177.0
offset_right = 371.0
offset_bottom = 177.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Content"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 80

[node name="TitleContainer" type="VBoxContainer" parent="Content/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -32

[node name="Label" type="Label" parent="Content/VBoxContainer/TitleContainer"]
layout_mode = 2
text = "Winged Animals"
label_settings = SubResource("LabelSettings_s48ht")
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Content/VBoxContainer/TitleContainer"]
layout_mode = 2
text = "Visit Every Season"
label_settings = SubResource("LabelSettings_2tit2")
horizontal_alignment = 1

[node name="ButtonsContainer" type="HBoxContainer" parent="Content/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 80

[node name="StartGameButton" type="Button" parent="Content/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme = ExtResource("4_2tit2")
text = "Start"

[node name="HowToPlayButton" type="Button" parent="Content/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme = ExtResource("4_2tit2")
text = "How to play"

[node name="QuitButton" type="Button" parent="Content/VBoxContainer/ButtonsContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("4_2tit2")
text = "Quit"

[node name="HowToPlayModal" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -400.0
offset_right = 400.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="HowToPlayModal"]
layout_mode = 2
texture = ExtResource("5_qrpx3")
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="HowToPlayModal"]
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="Label" type="RichTextLabel" parent="HowToPlayModal/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
theme = ExtResource("4_2tit2")
theme_override_constants/paragraph_separation = 32
theme_override_font_sizes/normal_font_size = 32
theme_override_font_sizes/bold_font_size = 32
theme_override_font_sizes/bold_italics_font_size = 32
theme_override_font_sizes/italics_font_size = 32
theme_override_font_sizes/mono_font_size = 32
bbcode_enabled = true
text = "* Place a tile on the board
* The tiles on the board will react to the tiles you place, creating life!
* Every few turns, you must place a bird to score on a row or column of your choice.
* Some of the items on the tiles will award points, others will multiply the points.
* Learn the different tile combinations and get the [wave freq=10.0 color=#ffffff40 ease=.0]highest score![/wave]
* The game ends after 10 birds were played. How high can you get with your last bird play?"
fit_content = true
scroll_active = false

[node name="MarginContainer2" type="MarginContainer" parent="HowToPlayModal"]
layout_mode = 2
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32

[node name="CloseModalButton" type="TextureButton" parent="HowToPlayModal/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = ExtResource("6_q2ppu")

[node name="ButtonClickAudio" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("7_q2ppu")

[node name="BottomInfo" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -960.0
offset_top = -120.0
offset_right = 960.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 40

[node name="HBoxContainer" type="HBoxContainer" parent="BottomInfo"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 64

[node name="GodotLogo" type="TextureRect" parent="BottomInfo/HBoxContainer"]
modulate = Color(0.11372549, 0.34509805, 0.61960787, 1)
layout_mode = 2
texture = ExtResource("8_p8tb1")
expand_mode = 3
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="BottomInfo/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="BottomInfo/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "A game made by:"
label_settings = SubResource("LabelSettings_p8tb1")

[node name="Label2" type="Label" parent="BottomInfo/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "gurbs  |  jotanoos  |  victornqueiroz"
label_settings = SubResource("LabelSettings_p8tb1")

[connection signal="pressed" from="Content/VBoxContainer/ButtonsContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="Content/VBoxContainer/ButtonsContainer/HowToPlayButton" to="." method="_on_how_to_play_button_pressed"]
[connection signal="pressed" from="Content/VBoxContainer/ButtonsContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="HowToPlayModal/MarginContainer2/CloseModalButton" to="." method="_on_close_modal_button_pressed"]
